--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==3.0.0
-Flask-CORS==6.0.1
-Flask-JWT-Extended==4.7.1
+Flask==2.3.2
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
-psycopg2-binary==2.9.11
-gunicorn==23.0.0
+SQLAlchemy==2.0.21
+psycopg2-binary==2.9.9
+pandas==2.1.1
+numpy==1.26.0
+python-dotenv==1.0.1
